--- a/744Project/Views/Accounts/Index.cshtml
+++ b/744Project/Views/Accounts/Index.cshtml
@@ -4,48 +4,55 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Customer.customerFirstname)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.accountNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.accountBalance)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.accountName)
-        </th>
-        <th></th>
-    </tr>
+<div class="container">
+    <h2>Index</h2>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <p>
+                @Html.ActionLink("Create New", "Create")
+            </p>
+            <table class="table">
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Customer.customerFirstname)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.accountNumber)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.accountBalance)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.accountName)
+                    </th>
+                    <th></th>
+                </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Customer.customerFirstname)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.accountNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.accountBalance)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.accountName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.accountID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.accountID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.accountID })
-        </td>
-    </tr>
-}
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Customer.customerFirstname)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.accountNumber)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.accountBalance)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.accountName)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.accountID }) |
+                            @Html.ActionLink("Details", "Details", new { id = item.accountID }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.accountID })
+                        </td>
+                    </tr>
+                }
 
-</table>
+            </table>
+        </div>
+        </div>
+    </div>
