--- a/744Project/Views/Account/ExternalLoginFailure.cshtml
+++ b/744Project/Views/Account/ExternalLoginFailure.cshtml
@@ -2,7 +2,15 @@
     ViewBag.Title = "Login Failure";
 }
 
-<hgroup>
-    <h2>@ViewBag.Title.</h2>
-    <h3 class="text-danger">Unsuccessful login with service.</h3>
-</hgroup>
+<div class="container">
+    @*<h2>@ViewBag.Title.</h2>*@
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <hgroup>
+                <h2>@ViewBag.Title.</h2>
+                <h3 class="text-danger">Unsuccessful login with service.</h3>
+            </hgroup>
+            
+        </div>
+        </div>
+    </div>
