--- a/744Project/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/744Project/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,13 +1,19 @@
 ﻿@{
-    ViewBag.Title = "Forgot Password Confirmation";
+	ViewBag.Title = "Forgot Password Confirmation";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Please check your email to reset your password.
-    </p>
-</div>
+<div class="container">
 	
+	<div class="panel panel-default">
+        <div class="panel-body">
+            <hgroup class="title"></hgroup>
+            <h2>@ViewBag.Title.</h2>
+            <div>
+                <p>
+                    Please check your email to reset your password.
+                </p>
+            </div>
+
+        </div>
+	</div>
+</div>
