--- a/744Project/Views/Customers/Delete.cshtml
+++ b/744Project/Views/Customers/Delete.cshtml
@@ -4,93 +4,101 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<div class="container">
+    <h2>Delete</h2>
+    <div class="panel panel-default">
+        <div class="panel-body">
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Customer</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.customerFirstname)
-        </dt>
+            <h3>Are you sure you want to delete this?</h3>
+            <div>
+                <h4>Customer</h4>
+                <hr />
+                <dl class="dl-horizontal">
+                    <dt>
+                        @Html.DisplayNameFor(model => model.customerFirstname)
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.customerFirstname)
-        </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.customerFirstname)
+                    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.middleName)
-        </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.middleName)
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.middleName)
-        </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.middleName)
+                    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.customerLastname)
-        </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.customerLastname)
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.customerLastname)
-        </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.customerLastname)
+                    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.customerPhone)
-        </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.customerPhone)
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.customerPhone)
-        </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.customerPhone)
+                    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.customerSSN)
-        </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.customerSSN)
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.customerSSN)
-        </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.customerSSN)
+                    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.customerAddress)
-        </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.customerAddress)
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.customerAddress)
-        </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.customerAddress)
+                    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.customerCity)
-        </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.customerCity)
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.customerCity)
-        </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.customerCity)
+                    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.customerState)
-        </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.customerState)
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.customerState)
-        </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.customerState)
+                    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.customerZip)
-        </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.customerZip)
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.customerZip)
-        </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.customerZip)
+                    </dd>
 
-    </dl>
+                </dl>
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+                    <div class="form-actions no-color">
+                        <input type="submit" value="Delete" class="btn btn-default" /> |
+                        @Html.ActionLink("Back to List", "Index")
+                    </div>
+                }
+            </div>
+
+</div>
+</div>
 </div>
