--- a/744Project/Views/Customers/Index.cshtml
+++ b/744Project/Views/Customers/Index.cshtml
@@ -4,78 +4,86 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<div class="container">
+    <h2>Index</h2>
+    <div class="panel panel-default">
+        <div class="panel-body">
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.customerFirstname)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.middleName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.customerLastname)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.customerPhone)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.customerSSN)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.customerAddress)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.customerCity)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.customerState)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.customerZip)
-        </th>
-        <th></th>
-    </tr>
+            <p>
+                @Html.ActionLink("Create New", "Create")
+            </p>
+            <table class="table">
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.customerFirstname)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.middleName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.customerLastname)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.customerPhone)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.customerSSN)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.customerAddress)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.customerCity)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.customerState)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.customerZip)
+                    </th>
+                    <th></th>
+                </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.customerFirstname)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.middleName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.customerLastname)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.customerPhone)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.customerSSN)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.customerAddress)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.customerCity)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.customerState)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.customerZip)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.customerID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.customerID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.customerID })
-        </td>
-    </tr>
-}
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.customerFirstname)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.middleName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.customerLastname)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.customerPhone)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.customerSSN)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.customerAddress)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.customerCity)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.customerState)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.customerZip)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.customerID }) |
+                            @Html.ActionLink("Details", "Details", new { id = item.customerID }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.customerID })
+                        </td>
+                    </tr>
+                }
 
-</table>
+            </table>
+
+</div>
+</div>
+</div>
