--- a/744Project/Views/Stores/Index.cshtml
+++ b/744Project/Views/Stores/Index.cshtml
@@ -4,42 +4,50 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<div class="container">
+    <h2>Index</h2>
+    <div class="panel panel-default">
+        <div class="panel-body">
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Relay.relayName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.storeName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.storeWeight)
-        </th>
-        <!--<th></th>-->
-    </tr>
+            <p>
+                @Html.ActionLink("Create New", "Create")
+            </p>
+            <table class="table">
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Relay.relayName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.storeName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.storeWeight)
+                    </th>
+                    <!--<th></th>-->
+                </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Relay.relayName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.storeName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.storeWeight)
-        </td>
-        <!--<td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.storeID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.storeID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.storeID })
-        </td>-->
-    </tr>
-}
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Relay.relayName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.storeName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.storeWeight)
+                        </td>
+                        <!--<td>
+                            @Html.ActionLink("Edit", "Edit", new { id=item.storeID }) |
+                            @Html.ActionLink("Details", "Details", new { id=item.storeID }) |
+                            @Html.ActionLink("Delete", "Delete", new { id=item.storeID })
+                        </td>-->
+                    </tr>
+                }
 
-</table>
+            </table>
+            
+        </div>
+</div>
+</div>
